--- a/src/main/resources/oauth.properties
+++ b/src/main/resources/oauth.properties
@@ -1,5 +1,5 @@
 # Replace these with values for your project from the Google API Console:
 # https://developers.google.com/console
 
-client_id=YOUR_CLIENT_ID
-client_secret=YOUR_CLIENT_SECRET
+client_id=810957772235-66g4b3l26i9lbkdbvcjt3tsp0pep8vcl.apps.googleusercontent.com
+client_secret=i6QnruFpswgqtL9fuSXM_Nkr
